--- a/cheatchecker/templates/Blog/videos.html
+++ b/cheatchecker/templates/Blog/videos.html
@@ -32,6 +32,9 @@
         {% for key, value in duration.items %}
         <p>Spent {{value}} seconds off screen at time {{key}}</p>
         {% endfor %}
+        {% for key2, value2 in offscreenduration.items %}
+        <p>Spent {{value2}} seconds looking off screen at time {{key2}}</p>
+        {% endfor %}
         <br><br>
         </p>
     </div>
